[gd_scene load_steps=27 format=3 uid="uid://dxo660f05aaf7"]

[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/StrEdit.gd" id="1_4w1gr"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/DexEdit.gd" id="2_rwbvj"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/ConEdit.gd" id="3_fxvei"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/IntEdit.gd" id="4_vq48f"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/WisEdit.gd" id="5_5r5wm"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/ChaEdit.gd" id="6_1qvkh"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/NameEdit.gd" id="7_q20h7"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/LevelEdit.gd" id="8_cov8j"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/ClassOptions.gd" id="9_15sb1"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/SubclassOptions.gd" id="10_w4js2"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/RaceOptions.gd" id="11_ojgwa"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/SubraceOptions.gd" id="12_evmo8"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/RaceBookOptions.gd" id="13_g2ogt"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/HitPointsEdit.gd" id="14_fomt5"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/ClassFeaturesButton.gd" id="14_js6af"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/HitDice.gd" id="15_0fcad"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/RaceFeaturesButton.gd" id="15_qjwc3"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/BackgroundOptions.gd" id="16_p0hty"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/AlignmentOptions.gd" id="17_ne5us"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/BackToMainMenuButton.gd" id="18_0eqix"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterBasics/NextToFeaturesButton.gd" id="19_u4sr2"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterFeatures/BackToBasicsButton.gd" id="20_xanq2"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterFeatures/NextToBackpackButton.gd" id="21_yjo7j"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/CharacterFeatures/FeatureList.gd" id="22_hu3ve"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/Backpack/BackToFeaturesButton.gd" id="22_mycha"]
[ext_resource type="Script" path="res://Scripts/UI/CreateCharacterScreen/Backpack/SaveCharacterButton.gd" id="23_ju7px"]

[node name="CharacterCreationScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterBasicsScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CharacterBasicsScreen"]
layout_mode = 2

[node name="MainVBox" type="VBoxContainer" parent="CharacterBasicsScreen/MarginContainer"]
layout_mode = 2

[node name="NewCharacterLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3
size_flags_stretch_ratio = 0.0
text = "Create New Character"

[node name="StatHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="StatGrid" type="GridContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
columns = 6

[node name="StrLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Strength"
horizontal_alignment = 1

[node name="DexLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Dexterity"
horizontal_alignment = 1

[node name="ConLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Constitution"
horizontal_alignment = 1

[node name="IntLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Intelligence"
horizontal_alignment = 1

[node name="WisLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Wisdom"
horizontal_alignment = 1

[node name="ChaLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
text = "Charisma"
horizontal_alignment = 1

[node name="StrEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
max_value = 20.0
value = 8.0
alignment = 1
script = ExtResource("1_4w1gr")

[node name="DexEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
size_flags_horizontal = 3
value = 8.0
alignment = 1
script = ExtResource("2_rwbvj")

[node name="ConEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
value = 8.0
alignment = 1
script = ExtResource("3_fxvei")

[node name="IntEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
value = 8.0
alignment = 1
script = ExtResource("4_vq48f")

[node name="WisEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
value = 8.0
alignment = 1
script = ExtResource("5_5r5wm")

[node name="ChaEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid"]
layout_mode = 2
value = 8.0
alignment = 1
script = ExtResource("6_1qvkh")

[node name="StatSelectionOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
item_count = 4
selected = 0
popup/item_0/text = "Manual"
popup/item_0/id = 4
popup/item_1/text = "Standard Array"
popup/item_1/id = 0
popup/item_2/text = "Point Buy"
popup/item_2/id = 1
popup/item_3/text = "Roll Dice"
popup/item_3/id = 2

[node name="BasicInfoHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 1.5

[node name="BasicInfoGrid" type="GridContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.75
theme_override_constants/h_separation = 13
columns = 3

[node name="NameLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Name"
horizontal_alignment = 1

[node name="NameEdit" type="LineEdit" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
placeholder_text = "New Character"
max_length = 30
clear_button_enabled = true
script = ExtResource("7_q20h7")

[node name="LevelEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.13
min_value = 1.0
max_value = 20.0
value = 1.0
prefix = "Level"
script = ExtResource("8_cov8j")

[node name="ClassLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
text = "Class"
horizontal_alignment = 1

[node name="ClassOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("9_15sb1")

[node name="SubclassOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("10_w4js2")

[node name="RaceLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
tooltip_text = "Racist!"
mouse_filter = 1
text = "Race"
horizontal_alignment = 1

[node name="RaceOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("11_ojgwa")

[node name="SubraceOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("12_evmo8")

[node name="RaceBookOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.13
item_count = 1
selected = 0
popup/item_0/text = "All Books"
popup/item_0/id = 0
script = ExtResource("13_g2ogt")

[node name="ClassFeaturesButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Class Features
"
script = ExtResource("14_js6af")

[node name="RaceFeaturesButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Race Features"
script = ExtResource("15_qjwc3")

[node name="HPHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="HitPointLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
text = "Hit Points: "

[node name="HitPointsEdit" type="SpinBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1000.0
value = 1.0
script = ExtResource("14_fomt5")

[node name="HitDiceLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
text = "Hit Dice: "

[node name="HitDice" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
unique_name_in_owner = true
layout_mode = 2
text = "4d8"
script = ExtResource("15_0fcad")

[node name="HitPointOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
size_flags_horizontal = 3
item_count = 4
selected = 0
popup/item_0/text = "Manual"
popup/item_0/id = 0
popup/item_1/text = "Average"
popup/item_1/id = 1
popup/item_2/text = "Maximum"
popup/item_2/id = 2
popup/item_3/text = "Roll"
popup/item_3/id = 3

[node name="FirstLevelMaxCheckbox" type="CheckBox" parent="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox"]
layout_mode = 2
size_flags_horizontal = 3
button_pressed = true
text = "First Level Max HP"

[node name="BackgroundVBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20
alignment = 1

[node name="MulticlassButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
text = "Multiclass"

[node name="BackgroundLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
text = "Background"

[node name="BackgroundOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
script = ExtResource("16_p0hty")

[node name="AlignmentLabel" type="Label" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
text = "Alignment"

[node name="AlignmentOptions" type="OptionButton" parent="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox"]
layout_mode = 2
item_count = 9
selected = 0
popup/item_0/text = "Lawful Good"
popup/item_0/id = 0
popup/item_1/text = "Neutral Good"
popup/item_1/id = 2
popup/item_2/text = "Chaotic Good"
popup/item_2/id = 1
popup/item_3/text = "Lawful Neutral"
popup/item_3/id = 3
popup/item_4/text = "True Neutral"
popup/item_4/id = 4
popup/item_5/text = "Chaotic Neutral"
popup/item_5/id = 5
popup/item_6/text = "Lawful Evil"
popup/item_6/id = 6
popup/item_7/text = "Neutral Evil"
popup/item_7/id = 8
popup/item_8/text = "Chaotic Evil"
popup/item_8/id = 7
script = ExtResource("17_ne5us")

[node name="ButtonHBox" type="HBoxContainer" parent="CharacterBasicsScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BackToMainMenuButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Main Menu"
script = ExtResource("18_0eqix")

[node name="NextToFeaturesButton" type="Button" parent="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next to Features and Skills"
script = ExtResource("19_u4sr2")

[node name="CharacterFeaturesScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CharacterFeaturesScreen"]
layout_mode = 2

[node name="MainVBox" type="VBoxContainer" parent="CharacterFeaturesScreen/MarginContainer"]
layout_mode = 2

[node name="FeatureHBox" type="HBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="FeatureListVBox" type="VBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FeatureLabel" type="Label" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeatureListVBox"]
layout_mode = 2
text = "Features to Assign"
horizontal_alignment = 1

[node name="FeatureList" type="ItemList" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeatureListVBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("22_hu3ve")

[node name="FeaturePanelContainer" type="PanelContainer" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeaturePanelContainer"]
layout_mode = 2

[node name="FeatureTitleLabel" type="Label" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeaturePanelContainer/VBoxContainer"]
layout_mode = 2
text = "Feature Name"
horizontal_alignment = 1

[node name="FeatureDescription" type="RichTextLabel" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeaturePanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "hello this is rich text why am I not displaying hold on one second"

[node name="ButtonHBox" type="HBoxContainer" parent="CharacterFeaturesScreen/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.25

[node name="BackToBasicsButton" type="Button" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Character Basics"
script = ExtResource("20_xanq2")

[node name="NextToBackpackButton" type="Button" parent="CharacterFeaturesScreen/MarginContainer/MainVBox/ButtonHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Next to Backpack Setup"
script = ExtResource("21_yjo7j")

[node name="BackpackCreationScreen" type="PanelContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="BackpackCreationScreen"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="BackpackCreationScreen/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackpackCreationScreen/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackToFeaturesButton" type="Button" parent="BackpackCreationScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back to Character Features
"
script = ExtResource("22_mycha")

[node name="SaveCharacterButton" type="Button" parent="BackpackCreationScreen/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Character
"
script = ExtResource("23_ju7px")

[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/StrEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/StrEdit" method="_on_value_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/DexEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/DexEdit" method="_on_value_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/ConEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/ConEdit" method="_on_value_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/IntEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/IntEdit" method="_on_value_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/WisEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/WisEdit" method="_on_value_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/ChaEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/StatHBox/StatGrid/ChaEdit" method="_on_value_changed"]
[connection signal="text_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/NameEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/NameEdit" method="_on_text_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/LevelEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/LevelEdit" method="_on_value_changed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/LevelEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox/MulticlassButton" method="_on_level_value_changed"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" method="_on_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubclassOptions" method="_on_class_options_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox/HitDice" method="_on_class_options_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/ClassOptions" to="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeatureListVBox/FeatureList" method="_on_class_options_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubclassOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubclassOptions" method="_on_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/RaceOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/RaceOptions" method="_on_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/RaceOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubraceOptions" method="_on_race_options_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubraceOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/BasicInfoGrid/SubraceOptions" method="_on_item_selected"]
[connection signal="pressed" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/ClassFeaturesButton" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/ClassFeaturesButton" method="_on_pressed"]
[connection signal="pressed" from="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/RaceFeaturesButton" to="CharacterBasicsScreen/MarginContainer/MainVBox/BasicInfoHBox/RaceFeaturesButton" method="_on_pressed"]
[connection signal="value_changed" from="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox/HitPointsEdit" to="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox/HitPointsEdit" method="_on_value_changed"]
[connection signal="ready" from="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox/HitDice" to="CharacterBasicsScreen/MarginContainer/MainVBox/HPHBox/HitPointsEdit" method="_on_hit_dice_ready"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox/BackgroundOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox/BackgroundOptions" method="_on_item_selected"]
[connection signal="item_selected" from="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox/AlignmentOptions" to="CharacterBasicsScreen/MarginContainer/MainVBox/BackgroundVBox/AlignmentOptions" method="_on_item_selected"]
[connection signal="pressed" from="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox/BackToMainMenuButton" to="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox/BackToMainMenuButton" method="_on_pressed"]
[connection signal="pressed" from="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox/NextToFeaturesButton" to="CharacterBasicsScreen/MarginContainer/MainVBox/ButtonHBox/NextToFeaturesButton" method="_on_pressed"]
[connection signal="item_selected" from="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeatureListVBox/FeatureList" to="CharacterFeaturesScreen/MarginContainer/MainVBox/FeatureHBox/FeatureListVBox/FeatureList" method="_on_item_selected"]
[connection signal="pressed" from="CharacterFeaturesScreen/MarginContainer/MainVBox/ButtonHBox/BackToBasicsButton" to="CharacterFeaturesScreen/MarginContainer/MainVBox/ButtonHBox/BackToBasicsButton" method="_on_pressed"]
[connection signal="pressed" from="CharacterFeaturesScreen/MarginContainer/MainVBox/ButtonHBox/NextToBackpackButton" to="CharacterFeaturesScreen/MarginContainer/MainVBox/ButtonHBox/NextToBackpackButton" method="_on_pressed"]
[connection signal="pressed" from="BackpackCreationScreen/MarginContainer/VBoxContainer/HBoxContainer/BackToFeaturesButton" to="BackpackCreationScreen/MarginContainer/VBoxContainer/HBoxContainer/BackToFeaturesButton" method="_on_pressed"]
[connection signal="pressed" from="BackpackCreationScreen/MarginContainer/VBoxContainer/HBoxContainer/SaveCharacterButton" to="BackpackCreationScreen/MarginContainer/VBoxContainer/HBoxContainer/SaveCharacterButton" method="_on_pressed"]
